[package]
name = "xtchd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "write"
path = "examples/write.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version="1.0.147", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.6"
#tokio-postgres = "0.7.5"
postgres = { version = "0.19.5", features = ["with-chrono-0_4"] }
pachydurable = { path = "../../Aleksandr/pachydurable"}


[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }
hyperactive = { path = "../../Aleksandr/hyperactive" }

